--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+:root {
+  --color-white-100: #fefefe;
+
+  --color-grey-100: #1a1a1a;
+  --color-grey-80: #484848;
+  --color-grey-60: #767676;
+  --color-grey-20: #d2d2d2;
+
+  --color-primary-100: #5925dc;
+  --color-primary-80: #7a5af8;
+  --color-primary-60: #9b8afb;
+  --color-primary-40: #bdb4fe;
+  --color-primary-20: #d9d6fe;
+  --color-primary-10: #f4f3ff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0px;
+}
+
+.button-medium-text {
+  color: var(--color-white-100);
+  text-align: center;
+  font-size: 16px;
+  font-family: Urbanist;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 26px;
+}
+
+.button-small-text {
+  color: var(--color-white-100);
+  text-align: center;
+  font-size: 14px;
+  font-family: Urbanist;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.label-text {
+  color: var(--color-grey-100);
+  font-size: 12px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 14px;
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
+}
+
+.placeholder-text {
+  color: var(--color-grey-60);
+  font-size: 14px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: -0.289px;
+}
+
+.paragraph-small {
+  font-size: 14px;
+  font-family: Urbanist;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.description-text {
+  font-size: 12px;
+  font-family: Urbanist;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
 }
