--- a/src/components/Navbar/NavbarStyle.css
+++ b/src/components/Navbar/NavbarStyle.css
@@ -42,6 +42,11 @@
   color: var(--color-grey-60);
 }
 
+.nav:hover {
+  cursor: pointer;
+  color: var(--color-primary-100);
+}
+
 .active {
   color: var(--color-grey-100);
 }
