--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,62 @@ a {
   text-decoration: none;
 }
 
+h1 {
+  color: var(--color-grey-100);
+  font-size: 72px;
+  font-family: Urbanist;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 82px;
+  text-align: center;
+}
+
+h2 {
+  color: var(--color-grey-100);
+  font-size: 64px;
+  font-family: Urbanist;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 74px;
+  text-align: center;
+}
+
+h3 {
+  font-size: 52px;
+  font-family: Urbanist;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 62px;
+  text-align: center;
+}
+
+h4 {
+  font-size: 42px;
+  font-family: Urbanist;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 52px;
+  text-align: center;
+}
+
+h5 {
+  font-size: 32px;
+  font-family: Urbanist;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 38px;
+  text-align: center;
+}
+
+h6 {
+  font-size: 24px;
+  font-family: Urbanist;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 34px;
+  text-align: center;
+}
+
 .button-medium-text {
   color: var(--color-white-100);
   text-align: center;
