--- a/src/pages/HomeStyle.css
+++ b/src/pages/HomeStyle.css
@@ -5,6 +5,8 @@
 .movies-page {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
   max-width: 1240px;
   margin: auto;
   padding-top: 24px;
