--- a/src/index.css
+++ b/src/index.css
@@ -160,3 +160,33 @@ h6 {
   font-weight: 600;
   text-transform: uppercase;
 }
+
+@media (max-width: 768px) {
+  h2 {
+    font-size: 52px;
+    line-height: 62px;
+  }
+
+  h6 {
+    font-size: 18px;
+  }
+
+  .headline-text {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 480px) {
+  h2 {
+    font-size: 42px;
+    line-height: 52px;
+  }
+
+  h6 {
+    font-size: 16px;
+  }
+
+  .headline-text {
+    font-size: 14px;
+  }
+}
