--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@ h4 {
   font-weight: 600;
   line-height: 52px;
   text-align: center;
+  margin: 0px;
 }
 
 h5 {
@@ -73,6 +74,7 @@ h5 {
   font-weight: 600;
   line-height: 38px;
   text-align: center;
+  margin: 0px;
 }
 
 h6 {
@@ -132,6 +134,15 @@ h6 {
   letter-spacing: -0.289px;
 }
 
+.paragraph-normal {
+  color: var(--color-grey-100, #1a1a1a);
+  font-size: 16px;
+  font-family: Urbanist;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+}
+
 .paragraph-small {
   font-size: 14px;
   font-family: Urbanist;
@@ -167,12 +178,27 @@ h6 {
     line-height: 62px;
   }
 
+  h4 {
+    font-size: 32px;
+    line-height: 38px;
+  }
+
+  h5 {
+    font-size: 24px;
+    line-height: 34px;
+  }
+
   h6 {
     font-size: 18px;
   }
 
   .headline-text {
     font-size: 16px;
+  }
+
+  .paragraph-normal {
+    font-size: 14px;
+    line-height: 22px;
   }
 }
 
