--- a/src/index.css
+++ b/src/index.css
@@ -178,6 +178,11 @@ h6 {
     line-height: 62px;
   }
 
+  h3 {
+    font-size: 42px;
+    line-height: 52px;
+  }
+
   h4 {
     font-size: 32px;
     line-height: 38px;
@@ -206,6 +211,11 @@ h6 {
   h2 {
     font-size: 42px;
     line-height: 52px;
+  }
+
+  h3 {
+    font-size: 32px;
+    line-height: 38px;
   }
 
   h6 {
