--- a/src/pages/Balance/BalanceStyle.css
+++ b/src/pages/Balance/BalanceStyle.css
@@ -5,12 +5,10 @@
   padding-bottom: 54px;
 }
 
-.balance-card-container {
-  padding: 0px 350px;
-}
-
 .balance-card {
   aspect-ratio: 8.5 / 5.3;
+  width: 450px;
+  margin: auto;
   border-radius: 20px;
   color: var(--color-white-100);
   display: flex;
@@ -37,6 +35,15 @@
   color: var(--color-white-100);
 }
 
+.button-balance-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  padding-top: 16px;
+}
+
 @media (max-width: 1240px) {
   .page-template {
     padding-left: 24px;
@@ -49,11 +56,21 @@
     padding-left: 16px;
     padding-right: 16px;
   }
+
+  .balance-card {
+    max-width: 250px;
+    background-color: aqua;
+    border-radius: 15px;
+  }
 }
 
 @media (max-width: 768px) {
   .page-template {
     padding-top: 24px;
     padding-bottom: 24px;
+  }
+
+  .balance-card {
+    width: 350px;
   }
 }
