--- a/src/pages/Book/BookStyle.css
+++ b/src/pages/Book/BookStyle.css
@@ -36,14 +36,25 @@
   cursor: pointer;
 }
 
+.seat-selected {
+  background-color: var(--color-primary-10);
+  border: 1px solid var(--color-primary-100);
+  cursor: pointer;
+}
+
 .seat-available .paragraph-normal {
   color: var(--color-white-100);
   font-weight: 600;
 }
 
-.seat-selected {
-  background-color: var(--color-primary-10);
-  border: 1px solid var(--color-primary-100);
+.seat-disabled .paragraph-normal {
+  color: var(--color-white-100);
+  font-weight: 600;
+}
+
+.seat-selected .paragraph-normal {
+  color: var(--color-primary-100);
+  font-weight: 600;
 }
 
 .seat-grid {
@@ -52,5 +63,25 @@
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-gap: 10px;
+  margin: auto;
+}
+
+.seat-summary-grid {
+  padding-top: 32px;
+  display: grid;
+  width: 500px;
+  grid-template-columns: 1fr 1fr;
+  margin: auto;
+}
+
+.total-price-container {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+.selected-seats-container {
+  display: flex;
+  flex-direction: column;
   margin: auto;
 }
