--- a/src/index.css
+++ b/src/index.css
@@ -206,6 +206,26 @@ h6 {
   text-transform: uppercase;
 }
 
+.tag-success {
+  background-color: var(--color-success-10);
+  border-radius: 6px;
+  border: 1px solid var(--color-success-100);
+  color: var(--color-success-100);
+  font-weight: 600;
+  padding: 4px 8px;
+  text-transform: uppercase;
+}
+
+.tag-danger {
+  background-color: var(--color-danger-10);
+  border-radius: 6px;
+  border: 1px solid var(--color-danger-100);
+  color: var(--color-danger-100);
+  font-weight: 600;
+  padding: 4px 8px;
+  text-transform: uppercase;
+}
+
 @media (max-width: 768px) {
   h2 {
     font-size: 52px;
